--- a/authors.html
+++ b/authors.html
@@ -18,7 +18,7 @@
 
 
   <title>
-Categories  </title>
+codemickeycode - Authors  </title>
 
 </head>
 
@@ -46,13 +46,7 @@ Categories  </title>
       </p>
     </header>
 
-<article>
-  <div id="article_text">
-    <ul>
-      <li><a href="http://codemickeycode.github.io/category/life.html">life</a></li>
-    </ul>
-  </div>
-</article>
+    <h1>Authors on codemickeycode</h1>        <li><a href="http://codemickeycode.github.io/author/micaela-reyes.html">Micaela Reyes</a> (1)</li>
 
     <footer>
     </footer>
