--- a/test-post.html
+++ b/test-post.html
@@ -16,9 +16,10 @@
 
   <link href="http://codemickeycode.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="codemickeycode Full Atom Feed" />
 
+<meta name="keywords" content="thoughts">
 
   <title>
-Categories  </title>
+Test Ting!  </title>
 
 </head>
 
@@ -40,21 +41,34 @@ Categories  </title>
 
   <main>
     <header>
-      <p>
-      <a href="http://codemickeycode.github.io">Index</a> &#124; <a href="http://codemickeycode.github.io/archives.html">Archives</a>
-      &#124; <a href="http://codemickeycode.github.io/feeds/all.atom.xml">Atom Feed</a>
-      </p>
+<p>Posted on Monday, October 28, 2013</p>
     </header>
 
 <article>
-  <div id="article_text">
-    <ul>
-      <li><a href="http://codemickeycode.github.io/category/life.html">life</a></li>
-    </ul>
+  <div id="article_title">
+    <h3><a href="http://codemickeycode.github.io/test-post.html">Test Ting!</a></h3>
   </div>
+  <div id="article_text">
+    <p>Hey, ho. Lets go!</p>
+  </div>
+  <div id="article_meta">
+    <p>Category: <a href="http://codemickeycode.github.io/category/life.html">life</a></p>
+    <p>Tags:
+      <a href="http://codemickeycode.github.io/tag/thoughts.html">thoughts</a>    </p>
+  </div>
+
+
 </article>
 
     <footer>
+<p><a href="http://codemickeycode.github.io/" class="button_accent">&larr; Back to Index</a></p>
+<script language="javascript">
+    function toggleComments() {
+        var commentDiv = document.getElementById("article_comments");
+        (commentDiv.style.display == "none") ? commentDiv.style.display = "block" : commentDiv.style.display = "none";
+        return false;
+    }
+</script>
     </footer>
 
     <div id="ending_message">
