--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ codemickeycode  </title>
         <img src="http://www.gravatar.com/avatar/a39a05d336c2733ca8a9553f9a2284ab.png?size=140x140" alt="logo">
       </a>
       <h2><a href="http://codemickeycode.github.io">Micaela Reyes</a></h2>
-      <p>Code. Passion. Freedom. Making a Difference :)</p>
+      <p>Code. Passion. Freedom. Making a Difference :) </br>
+        Hi! I’m Mickey, a Software Developer based in Manila and I’ve been breaking and building stuff since college.
+        When I'm not working, I volunteer my time for PythonPH. I love working with and hanging out with Pythonistas. They often amaze me and inspire me to think that it's not impossible to turn things around.
+</br>My interests usually revolve around things that have a shot at changing the world.
+      </p>
       <ul>
         <li><a href="https://twitter.com/codemickeycode" target="_blank">@codemickeycode</a></li>
         <li><a href="https://github.com/codemickeycode" target="_blank">opensource</a></li>
