--- a/index.html
+++ b/index.html
@@ -2,69 +2,75 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet/less" type="text/css" href="http://codemickeycode.github.io/theme/css/style.less">
-  <script src="http://codemickeycode.github.io/theme/js/less-1.3.3.min.js" type="text/javascript"></script>
-  <!-- <link rel="stylesheet" type="text/css" href="http://codemickeycode.github.io/theme/css/style.css"> -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <link rel="stylesheet" type="text/css" href="http://codemickeycode.github.io/theme/css/pygments.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif|PT+Mono">
+    <title>codemickeycode</title>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width; initial-scale=1.0">
-  <meta name="author" content="Micaela Reyes">
-  <meta name="description" content="Posts and writings by Micaela Reyes">
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-  <link href="http://codemickeycode.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="codemickeycode Full Atom Feed" />
+    <!-- Custom Google Web Font -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
-
-  <title>
-codemickeycode  </title>
+    <!-- Add custom CSS here -->
+    <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <aside>
-    <div id="user_meta">
-      <a href="http://codemickeycode.github.io">
-        <img src="http://www.gravatar.com/avatar/a39a05d336c2733ca8a9553f9a2284ab.png?size=140x140" alt="logo">
-      </a>
-      <h2><a href="http://codemickeycode.github.io">Micaela Reyes</a></h2>
-      <p>Code. Passion. Freedom. Making a Difference :)
-      </p>
-      <ul>
-        <li><a href="https://twitter.com/codemickeycode" target="_blank">@codemickeycode</a></li>
-        <li><a href="https://github.com/codemickeycode" target="_blank">opensource</a></li>
-        <li><a href="mailto:codemickeycode@gmail.com" target="_blank">email</a></li>
-      </ul>
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://codemickeycode.com">codemickeycode</a>
+            </div>
+
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <div class="intro-header">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>Micaela Reyes</h1>
+                        <h3>Code. Passion. Freedom. Making a difference :-)</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li><a href="https://twitter.com/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            </li>
+                            <li><a href="https://github.com/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
+                            <li><a href="http://www.linkedin.com/in/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
     </div>
-  </aside>
+    <!-- /.intro-header -->
 
-  <main>
-    <header>
-      <p>
-      <a href="http://codemickeycode.github.io">Index</a> &#124; <a href="http://codemickeycode.github.io/archives.html">Archives</a>
-      &#124; <a href="http://codemickeycode.github.io/feeds/all.atom.xml">Atom Feed</a>
-      </p>
-    </header>
+    <!-- JavaScript -->
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
 
-<article>
-  <div id="article_title">
-    <h3><a href="http://codemickeycode.github.io/test-post.html">Test Ting!</a></h3>
-  </div>
-  <div id="article_text">
-    <p>Hey, ho. Lets go!</p>
-  </div>
-</article>
-
-    <footer>
-<div id="paginator">
-
-</div>
-    </footer>
-
-    <div id="ending_message">
-      <p>&copy Micaela Reyes. Built using <a href="http://getpelican.com" target="_blank">Pelican</a>. Theme by Giulio Fidente on <a href="https://github.com/giulivo/pelican-svbhack" target="_blank">github</a>. .</p>
-    </div>
-  </main>
 </body>
+
 </html>
