--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Micaela Reyes</h1>
-                        <h3>Software Developer</h3>
-                        <h4><i>Code. Passion. Freedom. Making a difference :-)</i></h4>
+                        <h3>Software Enginner | Code. Passion. Freedom. Making a difference :-)</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="https://twitter.com/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
