--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Micaela Reyes</h1>
-                        <h3>Software Enginner | Code. Passion. Freedom. Making a difference :-)</h3>
+                        <h3>Software Engineer | Code. Passion. Freedom. Making a difference :-)</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="https://twitter.com/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
