--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://codemickeycode.com">codemickeycode</a>
+                <a class="navbar-brand" href="http://codemickeycode.com"><code>codemickeycode</code></a>
             </div>
 
         </div>
@@ -46,8 +46,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Micaela Reyes</h1>
-                        <h3>Software Engineer</h3>
+                        <h1>Hello. I'm Mickey</h1>
+                        <h2>a Software Engineer in Manila<h2>
                         <h4>Code. Passion. Freedom. Making a difference :-)</h4>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
