Changes intro text

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Hello. I'm Mickey</h1>
-                        <h2>a Software Engineer in Manila<h2>
+                        <h1>Micaela Reyes</h1>
+                        <h2>Software Engineer | Manila<h2>
                         <h4>Code. Passion. Freedom. Making a difference :-)</h4>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
