--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
                 <a class="navbar-brand" href="http://codemickeycode.com"> &lt; code > <code> mickey</code>&lt;/ code ></a>
             </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!--<li><a href="#about">About</a>-->
+                    </li>
+                    <li><a href="http://blog.codemickeycode.com/">Blog</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+
         </div>
         <!-- /.container -->
     </nav>
