--- a/index.html
+++ b/index.html
@@ -79,6 +79,49 @@
     </div>
     <!-- /.intro-header -->
 
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+
+                    <p class="lead">
+                    <b>Hi! I'm Mickey</b>, a Software Developer based in Manila and I’ve been breaking and building stuff since college.
+                    </p>
+
+                    <p class="lead">
+                    My first job was at a <a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a web-based project management application built using PHP and MySQL.
+                    </p>
+
+                    <p class="lead">
+                    After that, I transferred to <a href="http://www1.smart.com.ph/">a local telco</a> where I had the pleasure of working with an amazing team in handling projects and support services for several prepaid card systems. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
+                    </p>
+
+                    <p class="lead">
+                    After years of developing apps using proprietary tools, something hit me and I got excited to dive into Open Source so I worked for <a href="https://www.facebook.com/Auberonsolutions">a local start-up</a>  which allowed me to dabble with Python and OpenERP.
+                    </p>
+
+                    <p class="lead">
+                    These days, I'm enjoying a new adventure with a web product company since I've been a back-end developer for a long while and I missed web development.
+                    </p>
+
+                    <p class="lead">
+                    When I'm not working, I volunteer my time for <a href="http://python.ph/">PythonPH</a>. I love working with and hanging out with Pythonistas. They often amaze me and inspire me to think that it's not impossible to turn things around.
+                    </p>
+
+                    <p class="lead">
+                    My interests usually revolve around things that have a shot at changing the world.
+                    </p>
+
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
