Added moar links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </p>
 
                     <p class="lead">
-                    After that, I transferred to <a href="http://www1.smart.com.ph/">a local telco</a> where I had the pleasure of working with an amazing team in handling projects and support services for several prepaid card systems. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
+                    After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
                     </p>
 
                     <p class="lead">
@@ -107,7 +107,7 @@
                     </p>
 
                     <p class="lead">
-                    When I'm not working, I volunteer my time for <a href="http://python.ph/">PythonPH</a>. I love working with and hanging out with Pythonistas. They often amaze me and inspire me to think that it's not impossible to turn things around.
+                    When I'm not working, I volunteer my time for <a href="http://python.ph/">PythonPH</a>. I love working with and hanging out with <a href="https://www.facebook.com/groups/pythonph/">Pythonistas</a>. They often amaze me and inspire me to think that it's not impossible to turn things around.
                     </p>
 
                     <p class="lead">
