--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                             </li>
                             <li><a href="http://www.linkedin.com/in/codemickeycode" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
+                            <li><a href="https://www.gittip.com/codemickeycode/" class="btn btn-default btn-lg"><i class="fa fa-gittip fa-fw"></i> <span class="network-name">Gittip</span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
