Added link for tipthegeeks

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                     <h2>Side Projects:</h2>
                     <ul>
-                        <li>TipTheGeeks, a tipping app for geeks</li>
+                        <li><a href="http://tipthegeeks.com/">TipTheGeeks</a>, a tipping app for geeks</li>
                     </ul>
 
                     <h2>Causes I support:</h2>
