--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                     <h2>Side Projects:</h2>
                     <ul>
-                        <li>TipTheGeeks, a tipping app for geeks</li>
+                        <li>TipTheGeeks, a crowdfunding app that aims to allow people to send tips to those who helped or inspired them in the tech community.</li>
                     </ul>
 
                     <h2>Causes I support:</h2>
