Added a side project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
                     <h2>Side Projects:</h2>
                     <ul>
+                        <li><a href="http://wg.codemickeycode.com/">RAK.on</a>, share random acts of kindness</li>
                         <li><a href="http://tipthegeeks.com/">TipTheGeeks</a>, a crowdfunding app that aims to allow people to send tips to those who helped or inspired them in the tech community.</li>
                     </ul>
 
