Revised about me

--- a/index.html
+++ b/index.html
@@ -93,11 +93,7 @@
                     </p>
 
                     <p class="lead">
-                    My first job was at a <a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a web-based project management application built using PHP and MySQL.
-                    </p>
-
-                    <p class="lead">
-                    After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
+                    I started my career at <a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a project management app built using PHP and MySQL. After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
                     </p>
 
                     <p class="lead">
@@ -106,6 +102,10 @@
 
                     <p class="lead">
                     These days, I'm enjoying a new adventure with a <a href="https://www.freelancer.com/">web product company</a> since I've been a back-end developer for a long while and I missed web development.
+                    </p>
+
+                    <p class="lead">
+                    At work, I love software simplicity. I also value teamwork and collaboration a lot.
                     </p>
 
                     <p class="lead">
