--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                     <h2>Side Projects:</h2>
                     <ul>
-                        <li><a href="http://wg.codemickeycode.com/">RAK.on</a>&nbsp;- Together with an all-girls hackathon team, we created an app that lets you share random acts of kindness online as our entry for WebGeekDevCup 2014.</li>
+                        <li><a href="http://wg.codemickeycode.com/">RAK.on</a>&nbsp;- Together with an all-girls hackathon team, we created an app that lets you share stories of random acts of kindness online as our entry for WebGeekDevCup 2014.</li>
                         <li><a href="http://tipthegeeks.com/">TipTheGeeks</a>&nbsp;- Started out as a hackathon entry for Globe's TADHack last June 2014. A crowdfunding app that aims to allow people to send tips to those who helped or inspired them in the tech community.
 </li>
                     </ul>
