--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </p>
 
                     <p class="lead">
-                    I started my career at <a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a project management app built using PHP and MySQL. After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
+                    I started my career at a<a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a project management app built using PHP and MySQL. After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
                     </p>
 
                     <p class="lead">
