--- a/index.html
+++ b/index.html
@@ -90,33 +90,14 @@
                 <div class="col-lg-6">
                     <h2>Hi there!</h2>
                     <p class="lead">
-                    I'm Mickey, a Software Developer based in Manila and I’ve been breaking and building stuff since college.
+                    I'm Mickey, a Software Developer based in Manila and I’ve been breaking and building stuff since college. I love open source and all things Python.
                     </p>
-
                     <p class="lead">
-                    I started my career at a<a href="http://phil.ubiquitous-tech.com/">Japanese company</a> where I helped develop a project management app built using PHP and MySQL. After that, I transferred to a local telco where I had the pleasure of working with an amazing team in handling projects and support services for several <a href="https://www1.smart.com.ph/International/smart-link">prepaid card</a> <a href="https://www.smartpinoy.com/hk/">systems</a>. For over 4 years, I mainly dealt with Oracle PL/SQL, Java Web Services, Shell Scripts and Pro*C.
+                    I believe Edmund Burke when he said "The only thing necessary for the triumph of evil is for goodmen to do nothing." -- it's cheesy but there's no point denying it.
                     </p>
-
                     <p class="lead">
-                    After years of developing apps using proprietary tools, something hit me and I got excited to dive into Open Source so I worked for <a href="https://www.facebook.com/Auberonsolutions">a local start-up</a>  which allowed me to dabble with Python and OpenERP.
+                    On my off days I enjoy hiking,board games, hackathons and hanging out with crazy cool friends over good food and coffee.
                     </p>
-
-                    <p class="lead">
-                    These days, I'm enjoying a new adventure with a <a href="https://www.freelancer.com/">web product company</a> since I've been a back-end developer for a long while and I missed web development.
-                    </p>
-
-                    <p class="lead">
-                    At work, I love software simplicity. I also value teamwork and collaboration a lot.
-                    </p>
-
-                    <p class="lead">
-                    When I'm not working, I volunteer my time for <a href="http://python.ph/">PythonPH</a>. I love working with and hanging out with <a href="https://www.facebook.com/groups/pythonph/">Pythonistas</a>. They often amaze me and inspire me to think that it's not impossible to turn things around.
-                    </p>
-
-                    <p class="lead">
-                    My interests usually revolve around things that have a shot at changing the world.
-                    </p>
-
                 </div>
                 <div class="col-lg-6">
                     <div class="clearfix"></div>
