--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     I believe Edmund Burke when he said "The only thing necessary for the triumph of evil is for goodmen to do nothing." -- it's cheesy but there's no point denying it.
                     </p>
                     <p class="lead">
-                    My friends and I put togther <a href="http://python.ph">Python.PH</a> and <a href="https://twitter.com/pyladiesmanila">PyLadies Manila</a>. We organize activities such as monthly meetups, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge.
+                    My friends and I put together <a href="http://python.ph">Python.PH</a> and <a href="https://twitter.com/pyladiesmanila">PyLadies Manila</a>. We organize activities such as monthly meetups, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge.
                     </p>
                     <p class="lead">
                     On my off days I enjoy hiking, board games, hackathons and hanging out with crazy cool friends over good food and coffee.
