Reworded stuff in about me section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-6">
                     <h2>Hi there!</h2>
                     <p class="lead">
-                    I'm Mickey, a Software Developer based in Manila and I’ve been breaking and building stuff since college. I love open source and all things Python.
+                    I'm Mickey, a Web Developer based in Manila and I’ve been breaking and building stuff since college. I love open source and all things Python.
                     </p>
                     <p class="lead">
                     I believe Edmund Burke when he said <i>"The only thing necessary for the triumph of evil is for goodmen to do nothing."</i> -- it's cheesy but there's no point denying it.
