--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h2>Hackathons / Personal Projects:</h2>
                     <ul>
                         <li><a href="http://pampangafood.com">Pampanga Food Company Website</a>&nbsp;- A CMS website for a meat products company in Anaheim, California.</li>
-                        <li><a href="https://github.com/cr8ivecodesmith/marketsnitch">Market Snitch</a>&nbsp;- <i>2nd Place Winner, #KabantayNgBayan Procurement Hackathon, November 22-23 2014.</i> A market research tool for <a href="http://philgeps.gov.ph">PhilGEPs</a> designed to help facilitate the creation of accurate budget estimates based on current market prices. It's main goal is to help erradicate or minimize over-budgeting for government procurement projects.</li>
+                        <li><a href="https://github.com/cr8ivecodesmith/marketsnitch">Market Snitch</a>&nbsp;- <i>2nd Place Winner, #KabantayNgBayan Procurement Hackathon, November 22-23 2014.</i> A market research tool for <a href="http://philgeps.gov.ph">PhilGEPs</a> designed to help facilitate the creation of accurate budget estimates based on current market prices. It's main goal is to help eradicate or minimize over-budgeting for government procurement projects.</li>
                         <li><a href="http://wg.codemickeycode.com/">RAK.on</a>&nbsp;- Together with an all-girls hackathon team, we created an app that lets you share stories of random acts of kindness online as our entry for WebGeekDevCup 2014.</li>
                         <li><a href="http://www.globelabs.com.ph/feed/17">TipTheGeeks</a>&nbsp;- Started out as a hackathon entry for Globe's TADHack last June 2014. A crowdfunding app that aims to allow people to send tips to those who helped or inspired them in the tech community.
 </li>
