--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     I'm Mickey, a Web Developer based in Manila. I love open source and all things Python.
                     </p>
                     <p class="lead">
-                    I believe Edmund Burke when he said <i>"The only thing necessary for the triumph of evil is for goodmen to do nothing."</i> -- it's cheesy but there's no point denying it.
+                    I'm a big fan of the bands Malay, Dicta Licence and the late Francis Magalona hence I believe that life is indeed "more than just eating, breathing and accumulating"​. I also believe Edmund Burke when he said <i>"The only thing necessary for the triumph of evil is for goodmen to do nothing."</i> -- it's cheesy but there's no point denying it.
                     </p>
                     <p class="lead">
-                    My friends and I put together <a href="http://python.ph">Python.PH</a> and <a href="https://www.facebook.com/groups/pyladiesmanila/">PyLadies Manila</a>. We organize activities such as monthly <a href="http://www.meetup.com/pythonph/">meetups</a>, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge.
+                    My friends and I put together <a href="http://python.ph">Python.PH</a> and <a href="https://www.facebook.com/groups/pyladiesmanila/">PyLadies Manila</a>. We organize activities such as monthly <a href="http://www.meetup.com/pythonph/">meetups</a>, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge. We're not just an organization--we are a movement.
                     </p>
                     <p class="lead">
                     On my off days I enjoy hiking, board games, hackathons and hanging out with crazy cool friends over good food and coffee.
