Updated about me

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     I'm Mickey, a Web Developer based in Manila. I love open source and all things Python.
                     </p>
                     <p class="lead">
-                    My friends and I put together <a href="http://python.ph">Python.PH</a> and <a href="https://www.facebook.com/groups/pyladiesmanila/">PyLadies Manila</a>. We organize activities such as monthly <a href="http://www.meetup.com/pythonph/">meetups</a>, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge.
+                    My friends and I put together <a href="http://python.ph">Python.PH</a> and <a href="https://www.facebook.com/groups/pyladiesmanila/">PyLadies Manila</a>. We organize activities such as monthly <a href="http://www.meetup.com/pythonph/">meetups</a>, workshops and the yearly <a href="http://ph.pycon.org">PyCon</a> in the hopes that we make small dents of improvement in the Philippine IT industry by providing inspiring venues for Python enthusiasts to learn, collaborate and share knowledge. Were not just an organization--we are a movement.
                     </p>
                     <p class="lead">
                     On my off days I enjoy hiking, board games, hackathons and hanging out with crazy cool friends over good food and coffee.
