Update about me

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <p class="lead">
                     On my off days I enjoy hiking, board games, hackathons and hanging out with crazy cool friends over good food and coffee.
                     </p>
+                    <p class="lead">
+                    I <a href="https://twitter.com/codemickeycode">tweet</a> and <a href="http://blog.codemickeycode.com/">blog</a> about tech, personal adventures and random stuff every once in a while.
+                    </p>
                 </div>
                 <div class="col-lg-6">
                     <div class="clearfix"></div>
