--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="scrollto">My Works</a>
+							<a href="#portfolio" class="scrollto">My Work</a>
 						</li>
 						<li>
 							<a href="#contact" class="scrollto">Contact Me</a>
@@ -296,7 +296,7 @@
 
 				<header class="section-header text-center">
 
-					<h1 class="scrollimation scale-in">My Works</h1>
+					<h1 class="scrollimation scale-in">My Work</h1>
 					<p>I love building websites and teaching people how to code.<br/></p>
 
 				</header>
