--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 							<a href="#" data-filter=".web-design">Websites</a>
 						</li>
 						<li class="scrollimation fade-left">
-							<a href="#" data-filter=".icons">Tech/Programming Workshops</a>
+							<a href="#" data-filter=".icons">Workshops</a>
 						</li>
 <!-- 						<li class="scrollimation fade-left d1">
 							<a href="#" data-filter=".ui-kits">UI Kits</a>
@@ -330,11 +330,11 @@
 					=============================================== -->
 					<article class="project-item web-design">
 
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/pfc.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
+							<h2 class="project-title">Pampanga Food Company</h2><!--Project Title -->
+							<p>CMS Website</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
@@ -361,11 +361,11 @@
 
 					<article class="project-item icons">
 
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/wtm-2015.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
+							<h2 class="project-title">Python for the Curious Workshop 2015</h2><!--Project Title -->
+							<p>iAcademy Makati, March 2015</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
@@ -387,13 +387,13 @@
 
 					</article><!--End Project Item -->
 
-					<article class="project-item web-design">
+					<article class="project-item icons">
 
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/django-girls-2015.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
+							<h2 class="project-title">Django Girls Workshop 2015</h2><!--Project Title -->
+							<p>MozspaceMNL, May 2015</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
@@ -417,67 +417,11 @@
 
 					<article class="project-item icons">
 
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/wtm-2016.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
-						</div>
-
-						<!--==== Project Preview HTML ====-->
-
-						<div class="sr-only project-description"
-							data-category="Category"
-							data-date="Date"
-							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
-						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-						</div>
-
-					</article><!--End Project Item -->
-
-					<article class="project-item ui-kits">
-
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
-
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
-						</div>
-
-						<!--==== Project Preview HTML ====-->
-
-						<div class="sr-only project-description"
-							data-category="Category"
-							data-date="Date"
-							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
-						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-						</div>
-
-					</article><!--End Project Item -->
-
-					<article class="project-item ui-kits">
-
-						<img class="img-responsive project-image" src="assets/placeholder-320x210.jpg"  alt=""><!--Project thumb -->
-
-						<div class="hover-mask">
-							<h2 class="project-title">Project Title</h2><!--Project Title -->
-							<p>Subtitle</p><!--Project Subtitle -->
+							<h2 class="project-title">Python for the Curious Workshop 2016</h2><!--Project Title -->
+							<p>DLSU Taft, March 2016</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
