Add details about ofc project

--- a/index.html
+++ b/index.html
@@ -340,17 +340,18 @@
 						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
-							data-category="Category"
-							data-date="Date"
+							data-category="Content Management System"
+							data-date="January 2015"
 							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
+							data-link="http://pampangafood.com/"
+							data-descr="website for Pampanga Food Company"
+							data-images="assets/pfc-details.png,assets/pfc-details2.png"
 						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
+							<p>A website made for Pampanga Food Company.
+							</p>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
+							<p>It has a Content Management System (CMS) which allows the client to customize the contents and add/edit pages whenever needed.</p>
+
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com/">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
