Add django girls workshop desc and pics

--- a/index.html
+++ b/index.html
@@ -400,17 +400,16 @@
 						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
-							data-category="Category"
-							data-date="Date"
-							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
+							data-category="Programming Workshop"
+							data-date="May 16, 2015"
+							data-link="https://djangogirls.org/manila/"
+							data-descr="A free programming workshop for women"
+							data-images="assets/skills-and-bugs.jpg,assets/django-girls-group-hug.jpg"
 						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
+							<p>A Django Workshop for Beginners co-organized by <a href="http://www.meetup.com/pyladiesmanila/">PyLadies Manila</a> and <a href="http://djangogirls.org/">Django Girls.</a></p>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
+							<p>It's a free of charge one-day workshop about the Django web framework using Python. It included a lecture with coaches that guided the participants in making their own web application - a personal blog!</p>
+
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
