Add copyright info

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 					</div>
 
 					<div class="col-sm-6 text-right">
-						<p>&copy;2014 Me Flat Theme by <a href="http://q-themes.net/">Qthemes</a></p>
+						<p>&copy; 2016 codemickeycode</p>
 					</div>
 
 				</div>
