--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
 						<span class="chart" data-percent="70"><span class="percent">70</span></span>
 						<h2 class="text-center">HTML / CSS</h2>
 					</div>
+					<div class="col-sm-6 col-md-3 text-center">
+						<span class="chart" data-percent="70"><span class="percent">70</span></span>
+						<h2 class="text-center">Git</h2>
+					</div>
 <!-- 					<div class="col-sm-6 col-md-3 text-center">
 						<span class="chart" data-percent="60"><span class="percent">60</span></span>
 						<h2 class="text-center">Graphic Design</h2>
