Add images for GDG WTM 2016

--- a/index.html
+++ b/index.html
@@ -377,18 +377,22 @@
 						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
-							data-category="Category"
+							data-category="Programming Workshop"
 							data-date="Date"
-							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
+							data-descr="Python Code Lab at GDG Women TechMakers PH 2015"
+							data-images="assets/pycurious2015.jpg"
 						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
+							<p>Have you ever seen a programming language so readable it’s almost pseudocode? So powerful that it’s used to power companies like Instagram, disqus, YouTube, Pinterest and bitbucket? So scientifically friendly that academics everywhere swear by it? So chill that it was named after a sketch comedy troupe?</p>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com/">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<p>Topics Covered:</p>
+							<ul>
+								<li>A very brief history of Python</li>
+								<li>The beauty of Python</li>
+								<li>Basic Python Syntax</li>
+								<li>Hands-on Activity</li>
+								<li>The local Python community</li>
+							</ul>
+
 						</div>
 
 					</article><!--End Project Item -->
@@ -426,23 +430,28 @@
 
 						<div class="hover-mask">
 							<h2 class="project-title">Python for the Curious Workshop 2016</h2><!--Project Title -->
-							<p>DLSU Taft, March 2016</p><!--Project Subtitle -->
+							<p>DLSU Taft, March 19 2016</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
 
 						<div class="sr-only project-description"
-							data-category="Category"
-							data-date="Date"
-							data-client="Client"
-							data-link="www.example.com,http://www.google.com"
-							data-descr="A small description goes here."
-							data-images="assets/placeholder-750x430.jpg,assets/placeholder-750x430.jpg"
+							data-category="Programming Workshop"
+							data-date="March 19, 2016"
+							data-link="http://blog.codemickeycode.com/meet-your-python-for-the-curious-workshop-coaches"
+							data-descr="Python Code Lab at GDG Women TechMakers PH 2016"
+							data-images="assets/wtm-2016-2.jpg,assets/wtm-2016-3.jpg"
 						>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
+							<p>Have you ever seen a programming language so readable it’s almost pseudocode? So powerful that it’s used to power companies like Instagram, disqus, YouTube, Pinterest and bitbucket? So scientifically friendly that academics everywhere swear by it? So chill that it was named after a sketch comedy troupe?</p>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-							<p>Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.</p>
+							<p>Topics Covered:</p>
+							<ul>
+								<li>The Beauty of Python</li>
+								<li>Intro to Python</li>
+								<li>Hands-on Activity: Hackerrank Problems with Python</li>
+								<li>Next Steps: What do to with what you just learned...</li>
+							</ul>
+
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
