Add links to slides

--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
 								<li>The local Python community</li>
 							</ul>
 
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
 					</article><!--End Project Item -->
@@ -419,7 +420,7 @@
 
 							<p>It's a free of charge one-day workshop about the Django web framework using Python. It included a lecture with coaches that guided the participants in making their own web application - a personal blog!</p>
 
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila/djangogirlsmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
 					</article><!--End Project Item -->
@@ -452,7 +453,7 @@
 								<li>Next Steps: What do to with what you just learned...</li>
 							</ul>
 
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://slides.com/pyladiesmanila">Check the slides<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
 					</article><!--End Project Item -->
