--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="col-sm-12 text-col text-center">
 
 						<h1>Hi, I'm Micaela Reyes</h1>
-						<p>a Web Developer based in Manila</p>
+						<p>a Full Stack Web Developer based in Manila</p>
 
 					</div>
 
