--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="col-sm-12 text-col text-center">
 
 						<h1>Hi, I'm Micaela Reyes</h1>
-						<p>a Web Developer based in Manila</p>
+						<p>a Web Developer based in Manila.</p>
 
 					</div>
 
@@ -230,13 +230,19 @@
 
 						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an insane love for tech and building things.</p>
 
+						<p class="text-center scrollimation fade-in">I’m a Software Engineer based in Manila with over 9 years industry experience.</p>
+
+						<p class="text-center scrollimation fade-in">I've built company websites using Mezzanine CMS and maintained e-commerce websites built with Django for US-based clients.</p>
+
+						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs, i'll be happy to have a chat about it :)</p>
+
 					</div>
 
 				</div>
 
 
 
-				<p class="text-center"><a class="btn btn-meflat scrollto white icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a></p>
+				<p class="text-center"><a class="btn btn-meflat scrollto icon-left" href="#contact"><i class="fa fa-arrow-down"></i>Hire Me</a> or <a class="btn btn-meflat" href="http://codehappy.ph/"><i class="fa"></i>Hire My Team</a></p>
 
 			</div>
 
