Update about me

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/about.jpg" alt="" />
 
-						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an insane love for tech and building things.</p>
+						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an <strong>insane love</strong> for <strong>tech</strong> and <strong>building things.</strong></p>
 
 						<p class="text-center scrollimation fade-in">I’m a Software Engineer based in Manila with over 9 years industry experience.</p>
 
