--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 						<p class="text-center scrollimation fade-in">I’m a Software Engineer based in Manila with over 9 years industry experience.</p>
 
-						<p class="text-center scrollimation fade-in">I've built company websites using Mezzanine CMS and maintained e-commerce websites built with Django for US-based clients.</p>
+						<p class="text-center scrollimation fade-in">I build and maintain CMS, E-commerce and various websites with Python, Django and Mezzanine.</p>
 
 						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs, i'll be happy to have a chat about it :)</p>
 
