--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 					</div>
 
 					<div class="col-sm-6 text-right">
-						<p>&copy; 2016 codemickeycode</p>
+						<p>&copy; 2016 codemickeycode | Proudly made with <i class="fa fa-heart"></i> & <i class="fa fa-coffee" aria-hidden="true"></i>&nbsp;in Manila, PH.</p>
 					</div>
 
 				</div>
