--- a/index.html
+++ b/index.html
@@ -72,16 +72,22 @@
 						<li>
 							<a href="#about" class="scrollto">About Me</a>
 						</li>
+						<li>
+							<a href="#portfolio" class="scrollto">My Work</a>
+						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
 								<h1>M<span>R</span></h1>
 							</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="scrollto">My Work</a>
+							<a href="#contact" class="scrollto">Contact Me</a>
 						</li>
 						<li>
-							<a href="#contact" class="scrollto">Contact Me</a>
+							<a href="http://blog.codemickeycode.com/" target="_blank">My Blog</a>
+						</li>
+						<li>
+							<a href="http://codehappy.ph/" target="_blank">My Team</a>
 						</li>
 					</ul>
 				</div><!--End navbar-collapse -->
