--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 
 					<h1 class="scrollimation scale-in">Drop Me a Line</h1>
 					<p>I am available for freelance.<br/>Can't wait for the next exciting project! Could be yours?</p>
-					<p>codemickeycode@gmail.com</p>
+					<p>me@codemickeycode.com</p>
 				</header>
 
 <!-- 				<form  id="contact-form" class="bl_form text-center" action="contact.php" method="post" novalidate>
