Update footer links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
 						<h1>Hi, I'm Micaela Reyes</h1>
 						<p>a Web Developer based in Manila.</p>
-
+<!-- 						<h3>codemickeycode.com</h3>
+						<h2>CMS | E-commerce | Web Apps </h2> -->
 					</div>
 
 				</div>
@@ -614,7 +615,7 @@
 					</div>
 
 					<div class="col-sm-6 text-right">
-						<p>&copy; 2016 codemickeycode | Proudly made with <i class="fa fa-heart"></i> & <i class="fa fa-coffee" aria-hidden="true"></i>&nbsp;in Manila, PH.</p>
+						<p>&copy; 2016 codemickeycode | made with <i class="fa fa-heart"></i> & <i class="fa fa-coffee" aria-hidden="true"></i>&nbsp;by <a href="http://codehappy.ph">CodeHappy.ph</a> in Manila, PH.</p>
 					</div>
 
 				</div>
