Add codehappy to portfolio

--- a/index.html
+++ b/index.html
@@ -343,6 +343,34 @@
 
 				<div id="projects-container">
 
+										<!-- ==============================================
+					SINGLE PROJECT ITEM
+					=============================================== -->
+					<article class="project-item web-design">
+
+						<img class="img-responsive project-image" src="assets/codehappy-mobile.png"  alt=""><!--Project thumb -->
+
+						<div class="hover-mask">
+							<h2 class="project-title">CodeHappy</h2><!--Project Title -->
+							<p>Static Company Website</p><!--Project Subtitle -->
+						</div>
+
+						<!--==== Project Preview HTML ====-->
+
+						<div class="sr-only project-description"
+							data-category="Content Management System"
+							data-date="July 2016"
+							data-client="CodeHappy.ph"
+							data-link="http://codehappy.ph"
+							data-descr="website for CodeHappy"
+							data-images="assets/codehappy.png,assets/codehappy-web-dev.png,assets/codehappy-web-scraping.png">
+							<p>A simple static website for CodeHappy, a web development team in Manila
+							</p>
+
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://codehappy.ph">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+						</div>
+
+					</article>
 					<!-- ==============================================
 					SINGLE PROJECT ITEM
 					=============================================== -->
@@ -360,8 +388,8 @@
 						<div class="sr-only project-description"
 							data-category="Content Management System"
 							data-date="January 2015"
-							data-client="Client"
-							data-link="http://pampangafood.com/"
+							data-client="Pampanga Food Corporation"
+							data-link="http://pampangafood.com"
 							data-descr="website for Pampanga Food Company"
 							data-images="assets/pfc-details.png,assets/pfc-details2.png"
 						>
@@ -370,7 +398,7 @@
 
 							<p>It has a Content Management System (CMS) which allows the client to customize the contents and add/edit pages whenever needed.</p>
 
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com/">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://pampangafood.com">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
 					</article>
