Update workshop date

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 						<div class="sr-only project-description"
 							data-category="Programming Workshop"
-							data-date="Date"
+							data-date="March 28, 2016"
 							data-descr="Python Code Lab at GDG Women TechMakers PH 2015"
 							data-images="assets/pycurious2015.jpg"
 						>
