--- a/index.html
+++ b/index.html
@@ -186,40 +186,9 @@
 		</section>
 
 		<!-- ==============================================
-		FEATURED PROJECT
-		=============================================== -->
-		<section id="feat-project" class="gray-bg padding-top">
-
-			<div class="container">
-
-				<header class="section-header text-center">
-
-					<h1 class="scrollimation scale-in">Pampanga Food Company Website</h1>
-					<p>a website with a Content Management System (CMS) for a meat products company in Anaheim, California.</p>
-
-				</header>
-
-				<div class="scrollimation fade-up">
-					<img class="img-responsive img-center" src="assets/chrome-top.png" alt="" />
-
-					<div class="img-wrapper">
-
-						<img class="img-responsive img-center" src="assets/placeholder-800x500.jpg" alt="" />
-
-						<p class="text-center on-hover"><a class="btn btn-meflat icon-right" href="http://pampangafood.com/">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-
-					</div>
-				</div>
-
-			</div>
-
-		</section>
-
-
-		<!-- ==============================================
 		ABOUT
 		=============================================== -->
-		<section id="about" class="dark-bg light-typo padding-top-bottom">
+		<section id="about" class="gray-bg padding-top-bottom">
 
 			<div class="container">
 
@@ -241,7 +210,7 @@
 
 						<p class="text-center scrollimation fade-in">I build and maintain CMS, E-commerce and various websites with Python, Django and Mezzanine.</p>
 
-						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs, i'll be happy to have a chat about it :)</p>
+						<p class="text-center scrollimation fade-in">If you're looking to have a website built or looking for project-based, remote Python devs <i class="fa fa-laptop" aria-hidden="true"></i>, let's talk <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
 					</div>
 
@@ -583,6 +552,38 @@
 					</div>
 				</div>
 		</section> -->
+
+		<!-- ==============================================
+		FEATURED PROJECT
+		=============================================== -->
+		<section id="feat-project" class="gray-bg padding-top">
+
+			<div class="container">
+
+				<header class="section-header text-center">
+
+					<h1 class="scrollimation scale-in">Featured Project</h1>
+					<h4 class="scrollimation scale-in">Pampanga Food Company Website</h4>
+					<p>a website with a Content Management System (CMS) for a meat products company in Anaheim, California.</p>
+
+				</header>
+
+				<div class="scrollimation fade-up">
+					<img class="img-responsive img-center" src="assets/chrome-top.png" alt="" />
+
+					<div class="img-wrapper">
+
+						<img class="img-responsive img-center" src="assets/placeholder-800x500.jpg" alt="" />
+
+						<p class="text-center on-hover"><a class="btn btn-meflat icon-right" href="http://pampangafood.com/">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+
+					</div>
+				</div>
+
+			</div>
+
+		</section>
+
 		<!-- ==============================================
 		CONTACT
 		=============================================== -->
@@ -593,8 +594,10 @@
 				<header class="section-header text-center">
 
 					<h1 class="scrollimation scale-in">Drop Me a Line</h1>
-					<p>I am available for freelance.<br/>Can't wait for the next exciting project! Could be yours?</p>
-					<p>me@codemickeycode.com</p>
+					<!-- <p>I am available for freelance.<br/>Can't wait for the next exciting project! Could be yours?</p> -->
+					<p>Ready to start your next project with me or my team?<br/>That's great! Send me an email and I will get back to you as soon as possible :)</p>
+					<i class="fa fa-envelope-o fa-3x sr-contact" data-sr-id="10" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
+					<p><a href="mailto:me@codemickeycode.com">me@codemickeycode.com</a></p>
 				</header>
 
 <!-- 				<form  id="contact-form" class="bl_form text-center" action="contact.php" method="post" novalidate>
