--- a/index.html
+++ b/index.html
@@ -642,6 +642,8 @@
 							<li class="scrollimation fade-right d2"><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li> -->
 <!-- 							<li class="scrollimation fade-right d1"><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li> -->
 							<li class="scrollimation fade-right"><a href="https://ph.linkedin.com/in/codemickeycode"><i class="fa fa-linkedin fa-fw"></i></a></li>
+							<li class="scrollimation fade-right"><a href="https://github.com/codemickeycode"><i class="fa fa-github fa-fw"></i></a></li>
+							<li class="scrollimation fade-right"><a href="http://blog.codemickeycode.com/"><i class="fa fa-pencil fa-fw"></i></a></li>
 						</ul>
 					</div>
 
