Add link to codehappy team

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 
 					<h1 class="scrollimation scale-in">Drop Me a Line</h1>
 					<!-- <p>I am available for freelance.<br/>Can't wait for the next exciting project! Could be yours?</p> -->
-					<p>Ready to start your next project with me or my team?<br/>That's great! Send me an email and I will get back to you as soon as possible :)</p>
+					<p>Ready to start your next project with me or <a href="http://codehappy.ph/">my team</a>?<br/>That's great! Send me an email and I will get back to you as soon as possible :)</p>
 					<i class="fa fa-envelope-o fa-3x sr-contact" data-sr-id="10" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
 					<p><a href="mailto:me@codemickeycode.com">me@codemickeycode.com</a></p>
 				</header>
